Delete template. Works in tests, but fails in the browser. Perhaps 'template' is a reserved word?

--- a/app/views/admin/templates/_form.html.erb
+++ b/app/views/admin/templates/_form.html.erb
@@ -8,5 +8,8 @@
 
   <%= form.buttons do %>
     <%= form.commit_button %>
+    <% unless @template.new_record? %>
+      <%= link_to "Delete template", [:admin, @template], :method => :delete, :confirm => "Are you sure you want to delete this template? This action is irreversible." %>
+    <% end %>
   <% end %>
 <% end %>
