Revert "Renamed template to doc_template. Tests pass but delete template from browser still results in user being logged out."
This reverts commit e5151d7531e3878a572411080c588469d8eb3276.

--- a/app/views/admin/doc_templates/index.html.erb
+++ b/app/views/admin/doc_templates/index.html.erb
@@ -6,11 +6,11 @@
   <table>
     <% templates.each do |t| %>
       <tr>
-	<td><%= link_to t.name, edit_admin_doc_template_path(t) %></td>
+	<td><%= link_to t.name, edit_admin_template_path(t) %></td>
 	<td><%= t.title %></td>
       </tr>
     <% end %>
   </table>
 <% end %>
 
-<p><%= link_to "Create new template", new_admin_doc_template_path, :class => "button" %></p>
+<p><%= link_to "Create new template", new_admin_template_path, :class => "button" %></p>
