Render templates to page, tested implicily through undertaking tests

--- a/app/views/undertakings/edit.html.erb
+++ b/app/views/undertakings/edit.html.erb
@@ -1,4 +1,4 @@
-<%= render 'agreement_general', :undertaking => @undertaking %>
+<%= render_template('page', 'undertaking_agreement', :undertaking => @undertaking) %>
 
 <div class="undertaking-edit-actions">
   <%= form_for [@user, @undertaking] do |form| %>
