--- a/app/views/admin/emails/new.html.erb
+++ b/app/views/admin/emails/new.html.erb
@@ -1,7 +1,8 @@
 <%= semantic_form_for [:admin, @email], :url => admin_email_path do |form| %>
   <%= form.inputs do %>
-    <li>From: <%= form.object.from %></li>
-    <li>To: <%= form.object.to %></li>
+    <%= hidden_field_tag 'redirect_to', @redirect_to %>
+    <%= form.input :from %>
+    <%= form.input :to %>
     <%= form.input :subject %>
     <%= form.input :body, :as => :text %>
   <% end %>
