--- a/app/views/layouts/headless.html.erb
+++ b/app/views/layouts/headless.html.erb
@@ -2,10 +2,9 @@
 <html>
   <head>
     <title>ADA Users</title>
-    <link href="http://staff.ada.edu.au/stylesheets/import.css?1306462108" media="screen" rel="stylesheet" type="text/css">
-    <%= render "layouts/includes" %>
+    <%= stylesheet_link_tag 'headless' %>
   </head>
-  <body class="default" id="social_science">
+  <body>
     <%= yield %>
   </body>
 </html>
