--- a/app/views/layouts/headless.html.erb
+++ b/app/views/layouts/headless.html.erb
@@ -15,6 +15,8 @@
         top.rightFrameHref.replace(/([?&])mode=[a-z]*/,
                                    "\$1mode=documentation&submode=abstract");
     </script>
-    <%= yield %>
+    <div>
+      <%= yield %>
+    </div>
   </body>
 </html>
