--- a/app/views/decisions/new.html.erb
+++ b/app/views/decisions/new.html.erb
@@ -1,3 +1,7 @@
+<% content_for :head_extras do%>
+  <%= javascript_include_tag 'new_decision' %>
+<% end %>
+
 <h3>Confirm ID Request</h3>
 
 <%= semantic_form_for :decision, :url => decisions_path do |f| %>
