--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -178,3 +178,7 @@ p.admin-undertaking-actions {
 #category_a table, #category_b table, #category_a select, #category_b select {
   margin-bottom: 0.5em;
 }
+
+.confirmed_acspri_member_no {
+  background-color: #d24545;
+}
