--- a/app/views/admin/users/search.csv.erb
+++ b/app/views/admin/users/search.csv.erb
@@ -1,6 +1,6 @@
-Username,Role,Email,Institution,Type of work,Position,Date registered,Confirmed as ACSPRI member?,Title,First name,Surname
+Username,Role,Email,Institution,Type of work,Position,Date registered,Signed undertaking form?,Title,First name,Surname
 <%= CSV.generate do |csv|
   @users.each do |user|
-    csv << [ user.user, user_roles_to_s(user.user_roles), user.email, user.institution, user.action, user.position, user.dateregistered, confirmed_acspri_member_to_s(user.confirmed_acspri_member), user.title, user.fname, user.sname ]
+    csv << [ user.user, user_roles_to_s(user.user_roles), user.email, user.institution, user.action, user.position, user.dateregistered, signed_undertaking_form_to_s(user.signed_undertaking_form), user.title, user.fname, user.sname ]
   end
-end %>
+end.html_safe %>
