Display printable undertaking form after registration. Show non-printing instructions on this page. Added test.

--- a/app/views/layouts/_includes.html.erb
+++ b/app/views/layouts/_includes.html.erb
@@ -1,4 +1,5 @@
 <%= stylesheet_link_tag 'formtastic', 'colorbox', 'application' %>
+<%= stylesheet_link_tag 'print', :media => :print %>
 <%= javascript_include_tag 'jquery', 'rails', 'jquery.colorbox-min.js', 'jquery.select-filter.js', 'jquery.radio-tabs.js', 'application' %>
 <%= csrf_meta_tag %>
 <%= yield :head_extras %>
