--- a/app/views/admin/users/_user_details_table.html.erb
+++ b/app/views/admin/users/_user_details_table.html.erb
@@ -5,7 +5,7 @@
   <tr><td>Affiliation:</td><td><%= @user.affiliation %> <%= @user.country ? "(#{@user.country.Countryname})" : '' %></td></tr>
   <tr><td>Institution is ACSPRI member?</td><td><%= bool_to_s(@user.institution_is_acspri_member) %></td></tr>
   <tr><td>Type of work:</td><td><%= @user.action %></td></tr>
-  <tr><td>Member since:</td><td><%= Time.parse(@user.dateregistered).strftime("%e %b %Y") %>  (<%= time_ago_in_words(@user.dateregistered) %>)</td></tr>
+  <tr><td>Member since:</td><td><%= date_to_s(@user.dateregistered) %></td></tr>
   <tr><td>Last access:</td><td><%= @user.last_access_time ? time_ago_in_words(@user.last_access_time)+" ago" : "Never" %></td></tr>
   <tr>
     <td>
