Added table to home page illustrating the no-scrolling bug

--- a/app/views/identities/root.html.erb
+++ b/app/views/identities/root.html.erb
@@ -8,3 +8,10 @@
 <% else %>
   Welcome to the ADA user management system. Please <%= link_to "log in", new_session_path %> or <%= link_to "register", new_user_path %> to continue!
 <% end %>
+
+
+<h2>Debug table</h2>
+<table>
+  <tr><td>ThisIsAVeryLongWordThisIsAVeryLongWordThisIsAVeryLongWordThisIsAVeryLongWordThisIsAVeryLongWordThisIsAVeryLongWordThisIsAVeryLongWordThisIsAVeryLongWordThisIsAVeryLongWordThisIsAVeryLongWord</td></tr>
+</table>
+
