--- a/app/views/layouts/ada.html.erb
+++ b/app/views/layouts/ada.html.erb
@@ -4,42 +4,56 @@
 <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
 <meta charset="UTF-8">
 <title>ADA Users <%= yield :title %></title>
-<!-- Include this BEFORE the body to ensure older browsers can read new html5 elements --><script src="https://staff.ada.edu.au/javascripts/modernizr-1.5.min.js?1310623914" type="text/javascript"></script><link href="https://staff.ada.edu.au/stylesheets/import.css?1310623914" media="screen" rel="stylesheet" type="text/css">
-<link href="https://staff.ada.edu.au/stylesheets/theme.css?1310623914" media="screen" rel="stylesheet" type="text/css"><%= render "layouts/includes" %></head>
+<!-- Include this BEFORE the body to ensure older browsers can read new html5 elements --><script src="https://staff.ada.edu.au/javascripts/modernizr-1.5.min.js?1311301517" type="text/javascript"></script><script src="https://staff.ada.edu.au/javascripts/jquery.min.js?1311301517" type="text/javascript"></script><link href="https://staff.ada.edu.au/stylesheets/import.css?1311301517" media="screen" rel="stylesheet" type="text/css">
+<link href="https://staff.ada.edu.au/stylesheets/theme.css?1311301517" media="screen" rel="stylesheet" type="text/css"><%= render "layouts/includes" %></head>
 <body class="default" id="social_science">
 		<header><div class="login"><%= render "layouts/login" %></div>
-			
+
 			<div class="masthead<%= yield :masthead_class %>"><a href="https://staff.ada.edu.au/ada/home">Australian Data Archive</a></div>
 	</header><nav class="mainnav clearfix"><ul>
 <li> <a href="https://staff.ada.edu.au/ada/home">Home</a> 
 				</li>
-				<li> <a href="https://staff.ada.edu.au/ada/about">About</a> 
-				</li>
 				<li> <a href="https://staff.ada.edu.au/ada/subarchives">Subarchives</a> 
-				</li>
-				<li> <a href="https://staff.ada.edu.au/ada/data-access">Data Access</a> 
 						<ul>
-<li> <a href="https://staff.ada.edu.au/ada/browse-ada-catalogue">Browse ADA Catalogue</a> </li>
+<li> <a href="https://staff.ada.edu.au/crime-and-justice/home">Crime &amp; Justice</a> </li>
+								<li> <a href="https://staff.ada.edu.au/qualitative/home">Qualitative</a> </li>
+								<li> <a href="https://staff.ada.edu.au/international/home">International</a> </li>
+								<li> <a href="https://staff.ada.edu.au/social-science/home">Social Science</a> </li>
+								<li> <a href="https://staff.ada.edu.au/longitudinal/home">Longitudinal</a> </li>
+								<li> <a href="https://staff.ada.edu.au/historical/home">Historical</a> </li>
+								<li> <a href="https://staff.ada.edu.au/indigenous/home">Indigenous</a> </li>
+						</ul>
+</li>
+<li> <a href="https://staff.ada.edu.au/ada/data-access">Data Access</a> 
+						<ul>
+<li> <a href="https://staff.ada.edu.au/ada/ada-undertaking-forms">ADA Undertaking Forms</a> </li>
+								<li> <a href="https://users.ada.edu.au/users/new">Register for ADA</a> </li>
 								<li> <a href="https://staff.ada.edu.au/ada/search-ada">Search ADA</a> </li>
-								<li> <a href="https://staff.ada.edu.au/ada/register-for-ada">Register for ADA</a> </li>
-								<li> <a href="https://staff.ada.edu.au/ada/ada-undertaking-forms">ADA Undertaking Forms</a> </li>
+								<li> <a href="https://staff.ada.edu.au/ada/special-access-requests">Special Access Requests</a> </li>
+								<li> <a href="https://staff.ada.edu.au/ada/access-conditions">Access conditions</a> </li>
+								<li> <a href="https://staff.ada.edu.au/ada/browse">Browse ADA Catalogue</a> </li>
 						</ul>
 </li>
 <li> <a href="https://staff.ada.edu.au/ada/data-deposit">Data Deposit</a> 
 						<ul>
-<li> <a href="https://staff.ada.edu.au/ada/why-deposit-data-">Why Deposit Data?</a> </li>
-								<li> <a href="https://staff.ada.edu.au/ada/sharing-data-and-access-conditions">Sharing data and access conditions</a> </li>
+<li> <a href="https://staff.ada.edu.au/ada/sharing-data-and-access-conditions">Sharing data and access conditions</a> </li>
 								<li> <a href="https://staff.ada.edu.au/ada/how-to-deposit-data">How to deposit data</a> </li>
 								<li> <a href="https://staff.ada.edu.au/ada/deposit-forms">Deposit forms</a> </li>
+								<li> <a href="https://staff.ada.edu.au/ada/why-deposit-data-">Why Deposit Data?</a> </li>
+								<li> <a href="https://staff.ada.edu.au/ada/preferred-formats">Preferred formats</a> </li>
 						</ul>
 </li>
 <li> <a href="https://staff.ada.edu.au/ada/user-guides">User Guides</a> 
 				</li>
 				<li> <a href="https://staff.ada.edu.au/ada/ada-news">ADA News</a> 
 				</li>
-				<li> <a href="https://staff.ada.edu.au/ada/contact">Contact</a> 
-				</li>
-				<li> <a href="https://staff.ada.edu.au/ada/my-account">My Account</a> 
+				<li> <a href="https://staff.ada.edu.au/ada/about-us">About Us</a> 
+						<ul>
+<li> <a href="https://staff.ada.edu.au/ada/contact-ada">Contact ADA</a> </li>
+								<li> <a href="https://staff.ada.edu.au/ada/about-ada">About ADA</a> </li>
+						</ul>
+</li>
+<li> <a href="https://staff.ada.edu.au/ada/my-account">My Account</a> 
 				</li>
      </ul>
 <div class="searchContainer">
@@ -50,7 +64,7 @@
 	    </div>	
   </nav><nav class="subnav"><%= render "layouts/links" %></nav><nav class="breadcrumbs"><p><strong>YOU ARE HERE:</strong><a href="https://staff.ada.edu.au/"> 	/ada/home
 </a></p>
-		</nav><section class="content"><nav class="archive_menu"></nav><div class="notice"></div>
+		</nav><section class="content"><div class="notice"></div>
     <div class="alert"></div>
 
   	<!-- page partial start -->
@@ -62,14 +76,14 @@
     <div class="logos">
 				<img src="https://staff.ada.edu.au/images/content/logo_arc.gif" alt="logo_arc" width="90" height="56" class="partnersFirst"><img src="https://staff.ada.edu.au/images/content/logo_ncr.gif" alt="logo_nrc" width="109" height="56"><img src="https://staff.ada.edu.au/images/content/logo_anu.gif" width="90" height="56" alt="Logo_anu"><img src="https://staff.ada.edu.au/images/content/logo_uwa.gif" width="114" height="56" alt="logo_uwa"><img src="https://staff.ada.edu.au/images/content/logo_uts.gif" width="110" height="56" alt="logo_uts"><img src="https://staff.ada.edu.au/images/content/logo_um.gif" width="110" height="56" alt="logo_um"><img src="https://staff.ada.edu.au/images/content/logo_uq.gif" width="110" height="56" alt="logo_uq">
 </div>
-		<footer><p>General Enquiries: <a href="https://staff.ada.edu.au/#">assda@anu.edu.au</a></p>
+		<footer class="footer_small"><p>General Enquiries: <a href="https://staff.ada.edu.au/#">assda@anu.edu.au</a></p>
 		  <p>Web Enquiries: <a href="https://staff.ada.edu.au/#">webmaster@assda.anu.edu.au</a></p> 
 		  <p> &#169; Australian Data Archive</p>
-      <p><em>Deployed a66ce64e1968f1854bd3028fb6be4396cf493bc6 at 2011-07-14 04:11
+      <p><em>Deployed monkey_sc_5 at 2011-07-22 12:25
 </em></p>
     </footer></section>
 </body>
-<script src="https://staff.ada.edu.au/javascripts/jquery.min.js?1310623914" type="text/javascript"></script><script src="https://staff.ada.edu.au/javascripts/rails.js?1310623914" type="text/javascript"></script><script src="https://staff.ada.edu.au/javascripts/jquery.effects.core.js?1310623914" type="text/javascript"></script><script src="https://staff.ada.edu.au/javascripts/scripts.js?1310623914" type="text/javascript"></script><script src="https://staff.ada.edu.au/javascripts/application.js?1310623914" type="text/javascript"></script><script src="https://staff.ada.edu.au/javascripts/jquery-explr-1.3.min.js?1310623914" type="text/javascript"></script><script src="https://staff.ada.edu.au/javascripts/jquery.multi-open-accordion-1.0.1-ada.js?1310623914" type="text/javascript"></script><script type="text/javascript">
+<script src="https://staff.ada.edu.au/javascripts/rails.js?1311301517" type="text/javascript"></script><script src="https://staff.ada.edu.au/javascripts/jquery.effects.core.js?1311301517" type="text/javascript"></script><script src="https://staff.ada.edu.au/javascripts/scripts.js?1311301517" type="text/javascript"></script><script src="https://staff.ada.edu.au/javascripts/application.js?1311301517" type="text/javascript"></script><script src="https://staff.ada.edu.au/javascripts/jquery-explr-1.3.min.js?1311301517" type="text/javascript"></script><script src="https://staff.ada.edu.au/javascripts/jquery.multi-open-accordion-1.0.1-ada.js?1311301517" type="text/javascript"></script><script type="text/javascript">
       $(document).ready(function(){
       
      });
