Use undertaking.dataset_descriptions instead of undertaking.datasets when displaying datasets to the user to avoid duplicate entries

--- a/app/views/admin/undertakings/index.html.erb
+++ b/app/views/admin/undertakings/index.html.erb
@@ -48,8 +48,8 @@
 	  <p>
 	    <strong>Datasets:</strong><br />
 	    <ul>
-	      <% undertaking.datasets.each do |dataset| %>
-	        <li><%= dataset.dataset_description %></li>
+	      <% undertaking.dataset_descriptions.each do |dataset_description| %>
+	        <li><%= dataset_description %></li>
 	      <% end %>
 	    </ul>
 	  </p>
