--- a/app/views/users/change_password.html.erb
+++ b/app/views/users/change_password.html.erb
@@ -1,11 +1,15 @@
 <% content_for(:title) { @token_reset_password ? "Reset your password" : "Change password" } %>
 
+<% if current_user != @user %>
+  <p><%= "Changing #{@user.user}'s password. #{@user.user.capitalize} will be informed via email of this password change." %></p>
+<% end %>
+
 <%= semantic_form_for @user do |f| %>
   <%= f.semantic_errors %>
   <%= f.inputs do %>
     <% if @token_reset_password %>
       <%= f.hidden_field :token_reset_password_confirmation, :value => @token_reset_password %>
-    <% else %>
+    <% elsif @user == current_user %>
       <%= f.input :password_old, :label => 'Old Password', :input_html => {:value => ''} %>
     <% end %>
     <%= f.input :password, :label => 'New Password', :input_html => {:value => ''} %>
