--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,10 @@
 <% content_for(:title) { "Editing #{@user.user}" } %>
+
+<% if current_user != @user %>
+  <p><%= link_to "Change user password", change_password_user_path(@user) %></p>
+<% end %>
+
+
 <h2>User details</h2>
 
 <%= render 'users/form' %>
