Added report generation forms, reworked design for report model backend

--- a/app/views/layouts/_links.html.erb
+++ b/app/views/layouts/_links.html.erb
@@ -9,5 +9,6 @@
     <li><%= link_to "Manage users", admin_users_path %></li>
     <li><%= link_to "Manage access requests", admin_undertakings_path %></li>
     <li><%= link_to "Manage templates", admin_templates_path %></li>
+    <li><%= link_to "Reports", new_admin_report_path %></li>
   <% end %>
 </ul>
