Switched theme server to ada.edu.au

--- a/app/views/layouts/_login.html.erb
+++ b/app/views/layouts/_login.html.erb
@@ -10,5 +10,6 @@
                            :id => 'profile_button' %>
   </div>
 <% else %>
-  <%= link_to "Log in", new_session_path %>
+  <h1>USER Log-in</h1>
+  <%= link_to "Log in", new_session_path, :id => 'enter_button' %>
 <% end %>
