Added note about login details to register and login pages

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
+<p>Note: For previous users of the ASSDA website (<a href="http://www.assda.edu.au">http://www.assda.edu.au</a>), your ASSDA account details can also be used with ADA.</p>
+
 <h2>User Registration</h2>
 
 <% if Rails.env.production? %>
