--- a/app/views/layouts/ada.html.erb
+++ b/app/views/layouts/ada.html.erb
@@ -4,55 +4,55 @@
 <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
 <meta charset="UTF-8">
 <title>ADA Users <%= yield :title %></title>
-<link href="https://ada.edu.au/stylesheets/ada.css?1312533744" media="screen" rel="stylesheet" type="text/css">
-<script src="https://ada.edu.au/javascripts/ada.js?1312533744" type="text/javascript"></script><%= render "layouts/includes" %></head>
+<link href="/stylesheets/ada.css" media="screen" rel="stylesheet" type="text/css">
+<script src="/javascripts/ada.js" type="text/javascript"></script><%= render "layouts/includes" %></head>
 <!--[if lt IE 7 ]> <body class="ie6 default"> <![endif]--><!--[if IE 7 ]>    <body class="ie7 default"> <![endif]--><!--[if IE 8 ]>    <body class="ie8 default"> <![endif]--><!--[if (gt IE 8)|!(IE)]><!--><body class="default" id="social_science"> <!--<![endif]-->
 
 
 		<header><div class="login"><%= render "layouts/login" %></div>
 
-			<div class="masthead<%= yield :masthead_class %>"><a href="https://ada.edu.au/ada/home">Australian Data Archive</a></div>
+			<div class="masthead<%= yield :masthead_class %>"><a href="/ada/home">Australian Data Archive</a></div>
 	</header><nav class="mainnav clearfix"><ul>
-<li> <a href="https://ada.edu.au/ada/home" class="current">Home</a>
+<li> <a href="/ada/home" class="current">Home</a>
 				</li>
-				<li> <a href="https://ada.edu.au/ada/subarchives" class="">Subarchives</a>
+				<li> <a href="/ada/subarchives" class="">Subarchives</a>
 						<ul>
-<li> <a href="https://ada.edu.au/crime-and-justice/home">Crime &amp; Justice</a> </li>
-								<li> <a href="https://ada.edu.au/qualitative/home">Qualitative</a> </li>
-								<li> <a href="https://ada.edu.au/international/home">International</a> </li>
-								<li> <a href="https://ada.edu.au/social-science/home">Social Science</a> </li>
-								<li> <a href="https://ada.edu.au/longitudinal/home">Longitudinal</a> </li>
-								<li> <a href="https://ada.edu.au/historical/home">Historical</a> </li>
-								<li> <a href="https://ada.edu.au/indigenous/home">Indigenous</a> </li>
+<li> <a href="/crime-and-justice/home">Crime &amp; Justice</a> </li>
+								<li> <a href="/qualitative/home">Qualitative</a> </li>
+								<li> <a href="/international/home">International</a> </li>
+								<li> <a href="/social-science/home">Social Science</a> </li>
+								<li> <a href="/longitudinal/home">Longitudinal</a> </li>
+								<li> <a href="/historical/home">Historical</a> </li>
+								<li> <a href="/indigenous/home">Indigenous</a> </li>
 						</ul>
 </li>
-				<li> <a href="https://ada.edu.au/ada/data-access" class="">Data Access</a>
+				<li> <a href="/ada/data-access" class="">Data Access</a>
 						<ul>
-<li> <a href="https://ada.edu.au/ada/ada-undertaking-forms">ADA Undertaking Forms</a> </li>
+<li> <a href="/ada/ada-undertaking-forms">ADA Undertaking Forms</a> </li>
 								<li> <a href="https://users.ada.edu.au/users/new">Register for ADA</a> </li>
-								<li> <a href="https://ada.edu.au/ada/special-access-requests">Special Access Requests</a> </li>
-								<li> <a href="https://ada.edu.au/ada/search-ada">Search ADA</a> </li>
-								<li> <a href="https://ada.edu.au/ada/access-conditions">Access conditions</a> </li>
-								<li> <a href="https://ada.edu.au/ada/browse">Browse ADA Catalogue</a> </li>
+								<li> <a href="/ada/special-access-requests">Special Access Requests</a> </li>
+								<li> <a href="/ada/search-ada">Search ADA</a> </li>
+								<li> <a href="/ada/access-conditions">Access conditions</a> </li>
+								<li> <a href="/ada/browse">Browse ADA Catalogue</a> </li>
 						</ul>
 </li>
-				<li> <a href="https://ada.edu.au/ada/data-deposit" class="">Data Deposit</a>
+				<li> <a href="/ada/data-deposit" class="">Data Deposit</a>
 						<ul>
-<li> <a href="https://ada.edu.au/ada/deposit-forms">Deposit forms</a> </li>
-								<li> <a href="https://ada.edu.au/ada/how-to-deposit-data">How to deposit data</a> </li>
-								<li> <a href="https://ada.edu.au/ada/setting-access-conditions">Setting access conditions</a> </li>
-								<li> <a href="https://ada.edu.au/ada/preferred-formats">Preferred formats</a> </li>
-								<li> <a href="https://ada.edu.au/ada/why-deposit-data-">Why Deposit Data?</a> </li>
+<li> <a href="/ada/deposit-forms">Deposit forms</a> </li>
+								<li> <a href="/ada/how-to-deposit-data">How to deposit data</a> </li>
+								<li> <a href="/ada/setting-access-conditions">Setting access conditions</a> </li>
+								<li> <a href="/ada/preferred-formats">Preferred formats</a> </li>
+								<li> <a href="/ada/why-deposit-data-">Why Deposit Data?</a> </li>
 						</ul>
 </li>
-				<li> <a href="https://ada.edu.au/ada/user-guides" class="">User Guides</a>
+				<li> <a href="/ada/user-guides" class="">User Guides</a>
 				</li>
-				<li> <a href="https://ada.edu.au/ada/ada-news" class="">ADA News</a>
+				<li> <a href="/ada/ada-news" class="">ADA News</a>
 				</li>
-				<li> <a href="https://ada.edu.au/ada/about" class="">About</a>
+				<li> <a href="/ada/about" class="">About</a>
 						<ul>
-<li> <a href="https://ada.edu.au/ada/about">About ADA</a> </li>
-								<li> <a href="https://ada.edu.au/ada/contact-ada">Contact ADA</a> </li>
+<li> <a href="/ada/about">About ADA</a> </li>
+								<li> <a href="/ada/contact-ada">Contact ADA</a> </li>
 						</ul>
 </li>
 				<li> <a href="http://users.ada.edu.au" class="">My Account</a>
@@ -64,7 +64,7 @@
 		      <input type="text" name="term" id="search_term" value="Search this site"><input type="hidden" name="archive_id" id="archive_id" value="7"><input type="submit" alt="Go" value="go" id="search_button">
 </form>
 	    </div>	
-  </nav><nav class="subnav"><%= render "layouts/links" %></nav><nav class="breadcrumbs"><p><strong>YOU ARE HERE:</strong><a href="https://ada.edu.au/"> </a></p>
+  </nav><nav class="subnav"><%= render "layouts/links" %></nav><nav class="breadcrumbs"><p><strong>YOU ARE HERE:</strong><a href="/"> </a></p>
 		</nav><section class="content"><div class="notice"></div>
     <div class="alert"></div>
 
@@ -75,10 +75,10 @@
 		  </div>
 			
     <div class="logos">
-				<img src="https://ada.edu.au/images/content/logo_arc.gif" alt="logo_arc" width="90" height="56" class="partnersFirst"><img src="https://ada.edu.au/images/content/logo_ncr.gif" alt="logo_nrc" width="109" height="56"><img src="https://ada.edu.au/images/content/logo_anu.gif" width="90" height="56" alt="Logo_anu"><img src="https://ada.edu.au/images/content/logo_uwa.gif" width="114" height="56" alt="logo_uwa"><img src="https://ada.edu.au/images/content/logo_uts.gif" width="110" height="56" alt="logo_uts"><img src="https://ada.edu.au/images/content/logo_um.gif" width="110" height="56" alt="logo_um"><img src="https://ada.edu.au/images/content/logo_uq.gif" width="110" height="56" alt="logo_uq">
+				<img src="/images/content/logo_arc.gif" alt="logo_arc" width="90" height="56" class="partnersFirst"><img src="/images/content/logo_ncr.gif" alt="logo_nrc" width="109" height="56"><img src="/images/content/logo_anu.gif" width="90" height="56" alt="Logo_anu"><img src="/images/content/logo_uwa.gif" width="114" height="56" alt="logo_uwa"><img src="/images/content/logo_uts.gif" width="110" height="56" alt="logo_uts"><img src="/images/content/logo_um.gif" width="110" height="56" alt="logo_um"><img src="/images/content/logo_uq.gif" width="110" height="56" alt="logo_uq">
 </div>
-		<footer class="footer_small"><p>General Enquiries: <a href="https://ada.edu.au/#">assda@anu.edu.au</a></p>
-		  <p>Web Enquiries: <a href="https://ada.edu.au/#">webmaster@assda.anu.edu.au</a></p> 
+		<footer class="footer_small"><p>General Enquiries: <a href="/#">assda@anu.edu.au</a></p>
+		  <p>Web Enquiries: <a href="/#">webmaster@assda.anu.edu.au</a></p> 
 		  <p> &#169; Australian Data Archive</p>
       <p><em>Deployed b8fcff9e8c238a0aa34a3ff96bfa1f65133e5f42 at 2011-08-05 06:42
 </em></p>
