Added reporting by email address.

--- a/app/views/admin/reports/create.html.erb
+++ b/app/views/admin/reports/create.html.erb
@@ -1,5 +1,8 @@
 <%= render 'form' %>
 
+<% if @result.empty? %>
+No results found.
+<% else %>
 <hr />
 
 <table>
@@ -21,3 +24,4 @@
     <% end %>
   </tbody>
 </table>
+<% end %>
