--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -4,7 +4,7 @@
   If you have forgotten your username or password please enter your email address below. Instructions to reset your password will be emailed to you.
 </p>
 
-<p>If this email address has changed since you registered please contact the archive at assda@anu.edu.au.</p>
+<p>If this email address has changed since you registered please contact the archive at ada@anu.edu.au.</p>
 
 <br />
 
